--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,20 +4,20 @@ services:
   lang-uk:
     build: .
     ports:
-      - 8080:8080
+      - 5001:8080
     links:
     - ner-ms-uk
     - tokenize-ms
     - api_nlp_uk
   ner-ms-uk:
     image: chaliy/ner-ms:uk
-    ports:
+    expose:
       - '8080'
   tokenize-ms:
     image: chaliy/tokenize-ms
-    ports:
+    expose:
       - '8080'
   api_nlp_uk:
     image: chaliy/api_nlp_uk
-    ports:
+    expose:
       - '8080'
