disabled ner, port changed to 5555

--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -18,9 +18,9 @@ http {
   access_log  /var/log/nginx/access.log  main;
   keepalive_timeout  65;
 
-  upstream ner-ms-uk {
-      server ner-ms-uk:8080;
-  }
+#   upstream ner-ms-uk {
+#       server ner-ms-uk:8080;
+#   }
 
   upstream tokenize-ms {
       server tokenize-ms:8080;
@@ -31,17 +31,17 @@ http {
   }
 
   server {
-      listen 8080 default_server;
-      listen [::]:8080 default_server;
+      listen 5555 default_server;
+      listen [::]:5555 default_server;
 
       server_name localhost;
 
-      location /ner/mitie/uk {
-          proxy_redirect off;
-          rewrite ^/ner/mitie/uk/?(.*) /$1 break;
+    #   location /ner/mitie/uk {
+    #       proxy_redirect off;
+    #       rewrite ^/ner/mitie/uk/?(.*) /$1 break;
 
-          proxy_pass http://ner-ms-uk;
-      }
+    #       proxy_pass http://ner-ms-uk;
+    #   }
 
       location /tokenize {
           proxy_redirect off;
